--- a/.monaca/project_info.json
+++ b/.monaca/project_info.json
@@ -5,11 +5,16 @@
     "framework_version": "3.5",
     "xcode_version": "8",
     "cordova_version": "6.5",
-    "plugin_settings": [],
+    "plugin_settings": {
+        "cordova-plugin-inappbrowser": {
+            "variables": []
+        }
+    },
     "external_plugins": [
         "cordova-plugin-whitelist@1.3.1",
         "cordova-plugin-splashscreen@4.0.3",
         "cordova-custom-config@2.0.3",
-        "cordova-plugin-geolocation@2.4.3"
+        "cordova-plugin-geolocation@2.4.3",
+        "cordova-plugin-inappbrowser@1.7.1"
     ]
 }
